css/main.css
html {
  background-color: #f2f1ed;
  font-family: Georgia, serif;
  line-height: 1.5;
}

img:not(.logoimage) {
  width: 100%;
  border-collapse: collapse;
  display: block;
}

h2 {
  color: #5d8432;
  text-transform: uppercase;
  font-family: "Patua One", cursive;
  font-size: 1.5rem;
}

p {
  text-align: center;
  font-style: italic;
  font-size: .8rem;
}

.intro {
  font-size: 1rem;
}

a {
  color: #793284;
  text-decoration: none;
  font-family: "Patua One", cursive;
  font-size: 1.2rem;
  line-height: 1.6;
}

ol {
  list-style-type: none;
}

a:hover {
  color: #b42885;
}

